<resources>
    <string name="app_name">Aaa</string>
   <string name="login_title">Sign in</string>
    <string name="email">email</string>
    <string name="email_placeholder">test@gmail.com</string>
    <string name="password">password</string>
    <string name="password_placeholder">enter your password</string>
    <string name="remember_me">remember me"</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">login</string>
    <string name="dont_have_an_acc">dont have an acc?</string>
    <string name="signup">signup</string>
    <string name="tasks_title">Tasks</string>
    <string name="search_placeholder">Search tasks...</string>
    <string name="chip1">all</string>
    <string name="chip2">study</string>
    <string name="chip3">work</string>
    <string name="chip4">personal</string>
    <string name="chip5">shopping</string>
    <string name="menu1">Tasks</string>
    <string name="menu2">History</string>
    <string name="menu3">Settings</string>


</resources>